# types-wasm-rust-plugin

./: Cargo.toml
.github/workflows/: all.yml
src/: lib.rs
